docs: swagger actualizado
